--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   firebase_core: ^0.4.0+9
   firebase_auth: ^0.14.0+5
   google_sign_in: ^4.0.7
+  cloud_firestore: ^0.12.9+5
 
 dev_dependencies:
   flutter_test:
